# ray_tracing_4d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  lfs.yaml
app/: CMakeLists.txt  exercise_4.cpp  exercise_5.cpp  exercise_5_2d.cpp  exercise_5_4d.cpp  one_ray_trace.cpp  play_vec3.cpp  rasterization_3d.cpp  render_2d.cpp  render_3d.cpp  render_4d.cpp  write_ppm.cpp
assets/box/: box.gltf
assets/sphere/: sphere.gltf
assets/triangle/: triangle.gltf
doc/: linalg_dependency.drawio  mxm_migration.html  notes.css  notes.html
inc/: accessor.h  axis_aligned_bounding_box.h  base_type.h  bazier.h  bounding_volume_hierarchy.h  camera.h  ecs_component.h  ecs_entity.h  ecs_entity_tree.h  ecs_material.h  ecs_mesh.h  ecs_scene_3d.h  ecs_transform.h  full_dimensional_rotation.h  gltf_utils.h  hittable.h  image_processing.h  interpolation.h  io.h  linalg.h  linalg_bivec.h  linalg_complex.h  linalg_mat.h  linalg_mat_block.h  linalg_mat_ref.h  linalg_solve.h  linalg_utils.h  linalg_vec.h  linalg_vec_ref.h  low_dimensional_rotation.h  material.h  pixel.h  primitive_geometry.h  primitive_mesh_tree.h  random_factory.h  ray.h  ray_tracer.h  rigid_body.h  rigid_transform.h  rotation.h  (+6 more)
scripts/: build_lib.py  create_gif.py  mesh_polygon.py  pixel_coordinate.py
src/: io.cpp  material.cpp  rigid_body.cpp  rotation.cpp  tinygltf_impl.cpp
tests/: CMakeLists.txt  test_aabb.h  test_bazier.h  test_bvh.h  test_image_processing.h  test_interp.h  test_linalg.h  test_main.cpp  test_material.h  test_pixel.h  test_random_factory.h  test_ray.h  test_rigid_body.h  test_rigid_transform.h  test_rotation.h
