# add_executable(render_3d render_3d.cpp)
# target_link_libraries(render_3d rtc ${THREAD_LIB})

# add_executable(render_2d render_2d.cpp)
# target_link_libraries(render_2d rtc ${THREAD_LIB})

# add_executable(render_4d render_4d.cpp)
# target_link_libraries(render_4d rtc ${THREAD_LIB})

# add_executable(one_ray_trace one_ray_trace.cpp)
# target_link_libraries(one_ray_trace rtc )